# ChangeLog for net-misc/anytun
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v3
# $Header: $

  05 Dec 2009; Bernhard Tittelbach (xro) <xro@gmx.net> -anytun-0.3.1.ebuild,
  +anytun-0.3.2.ebuild:
  New Version 0.3.2. ebuild changes to reflect improvements in anytun build
  sys. thanks to #gentoo-sunrise people for their patience

  25 Nov 2009; Bernhard Tittelbach (xro) <xro@gmx.net>
  files/anytun-0.3.1.init:
  changed indentation to tabs on request.

  22 Nov 2009; Bernhard Tittelbach (xro) <xro@gmx.net>
  files/anytun-0.3.1.init:
  fixed indentation

  20 Nov 2009; Bernhard Tittelbach (xro) <xro@gmx.net>
  files/anytun-0.3.1.init:
  now using start-stop-daemon in init script

  19 Nov 2009; Bernhard Tittelbach (xro) <xro@gmx.net>
  files/anytun-0.3.1.init:
  removed custom restart() from init script

  18 Nov 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  anytun-0.3.1.ebuild, metadata.xml:
  Fix metadata.xml, ChangeLog, cleanup

  15 Nov 2009; Bernhard Tittelbach (xro) <xro@gmx.net>
  files/anytun-0.3.1.init:
  added opt reload to init script

  13 Nov 2009; Bernhard Tittelbach (xro) <xro@gmx.net> +anytun-0.3.1.ebuild,
  +files/anytun-0.3.1.init, +metadata.xml:
  New Ebuild for bug 292356.