@@ -22,8 +22,8 @@ VPN=${SVCNAME#*.}
 [ "$VPN" = "$SVCNAME" ] && VPN=""
 
 # Include anytun defaults if available
-if [ -f /etc/default/anytun ] ; then
-	. /etc/default/anytun
+if [ -f /etc/conf.d/anytun ] ; then
+	. /etc/conf.d/anytun
 fi
 
 test -x $DAEMON || exit 1
@@ -59,11 +59,12 @@ start_configd () {
 		test -d $VARCONFIG_DIR || mkdir -p $VARCONFIG_DIR
 		chmod 700 $VARCONFIG_DIR
 		rm -f $VARCONFIG_DIR/$NAME 2>/dev/null
+		KDPRF=`sed 's/#.*//'  <  $CONFIG_DIR/$NAME/config | grep -e 'kd-prf' | sed  's/^/ --/' | xargs echo`
 		for CLIENTNAME in `ls $CONFIG_DIR/$NAME/conf.d`; do
 			DAEMONARG=`sed 's/#.*//'  <  $CONFIG_DIR/$NAME/conf.d/$CLIENTNAME | grep -e '\w' | sed  's/^/ --/' | xargs echo`
-			$ANYTUNCONFIG $DAEMONARG >> $VARCONFIG_DIR/$NAME
+			$ANYTUNCONFIG $DAEMONARG $CIPHER $AUTHALGO $KDPRF >> $VARCONFIG_DIR/$NAME
 		done
-		CONTROLHOST=`sed 's/#.*//'  <  $CONFIG_DIR/$NAME/config | grep -e 'control-host' | sed  's/^/ --/'`
+		CONTROLHOST=`sed 's/#.*//'  <  $CONFIG_DIR/$NAME/config | grep -e 'control-host' | sed  's/^/ --/'i | xargs echo`
 		start-stop-daemon --start --pidfile $VARCONFIG_DIR/${NAME}.pid --exec $CONTROLDAEMON \
 			-- -f $VARCONFIG_DIR/$NAME $DAEMONOPTS $CONTROLHOST --write-pid $VARCONFIG_DIR/${NAME}.pid
 	fi
@@ -98,8 +99,7 @@ start () {
 stop () {
 	if test -z "$VPN" ; then
 		for PIDFILE in `ls $VARRUN_DIR/*.pid 2> /dev/null`; do
-			NAME=`echo $PIDFILE | cut -c17-`
-			NAME=${NAME%%.pid}
+			NAME=`basename $PIDFILE .pid`
 			ebegin "Stopping ${DESC} VPN: ${NAME}"
 			stop_vpn
 			eend $?
@@ -107,8 +107,7 @@ stop () {
 	else
 		if test -e $VARRUN_DIR/${VPN}.pid ; then
 			PIDFILE=`ls $VARRUN_DIR/${VPN}.pid 2> /dev/null`
-			NAME=`echo $PIDFILE | cut -c17-`
-			NAME=${NAME%%.pid}
+			NAME=`basename $PIDFILE .pid`
 			ebegin "Stopping ${DESC} VPN: ${NAME}"
 			stop_vpn
 			eend $?
@@ -121,8 +120,7 @@ stop () {
 reload () {
 	if test -z "$VPN" ; then
 		for PIDFILE in `ls $VARRUN_DIR/*.pid 2> /dev/null`; do
-			NAME=`echo $PIDFILE | cut -c17-`
-			NAME=${NAME%%.pid}
+			NAME=`basename $PIDFILE .pid`
 			if [ -d $CONFIG_DIR/$NAME/conf.d ] ; then
 				ebegin "Reloading ${DESC} VPN: ${NAME}"
 				stop_vpn
@@ -138,8 +136,7 @@ reload () {
 	else
 		if test -e $VARRUN_DIR/${VPN}.pid ; then
 			PIDFILE=`ls $VARRUN_DIR/${VPN}.pid 2> /dev/null`
-			NAME=`echo $PIDFILE | cut -c17-`
-			NAME=${NAME%%.pid}
+			NAME=`basename $PIDFILE .pid`
 			if [ -d $CONFIG_DIR/$NAME/conf.d ] ; then
 				ebegin "Reloading ${DESC} VPN: ${NAME}"
 				stop_vpn
