@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/anytun
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v3
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v3
 # $Header: $
+
+  18 Feb 2010; Bernhard Tittelbach (xro) <xro@gmx.net>
+  -files/anytun-0.3.1.init, -anytun-0.3.2.ebuild, +anytun-0.3.3.ebuild,
+  +files/anytun-0.3.3.init:
+  New Version 0.3.3. Some init.d script changes.
 
   05 Dec 2009; Bernhard Tittelbach (xro) <xro@gmx.net> -anytun-0.3.1.ebuild,
   +anytun-0.3.2.ebuild:
